added cancel method with ev test
